RESOLVED FIXED173570
Occasional deadlocks under ensurePositionInformationIsUpToDate (incoming sync message with waitForAndDispatchImmediately)
https://bugs.webkit.org/show_bug.cgi?id=173570
Summary Occasional deadlocks under ensurePositionInformationIsUpToDate (incoming sync...
Tim Horton
Reported 2017-06-19 17:06:36 PDT
Occasional deadlocks under ensurePositionInformationIsUpToDate (incoming sync message with waitForAndDispatchImmediately)
Attachments
Patch (25.52 KB, patch)
2017-06-19 17:07 PDT, Tim Horton
wenson_hsieh: review+
Tim Horton
Comment 1 2017-06-19 17:07:34 PDT
Tim Horton
Comment 2 2017-06-19 17:08:28 PDT
Build Bot
Comment 3 2017-06-19 17:10:07 PDT
Attachment 313344 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/ios/WKActionSheetAssistant.mm:579: Should be indented on a separate line, with the colon or comma first on that line. [whitespace/indent] [4] ERROR: Source/WebKit2/UIProcess/ios/WKActionSheetAssistant.mm:579: Comma should be at the beginning of the line in a member initialization list. [whitespace/init] [4] ERROR: Source/WebKit2/UIProcess/ios/WKActionSheetAssistant.mm:580: Wrong number of spaces before statement. (expected: 16) [whitespace/indent] [4] ERROR: Source/WebKit2/UIProcess/ios/WKActionSheetAssistant.mm:580: Comma should be at the beginning of the line in a member initialization list. [whitespace/init] [4] ERROR: Source/WebKit2/UIProcess/ios/WKActionSheetAssistant.mm:587: Wrong number of spaces before statement. (expected: 16) [whitespace/indent] [4] ERROR: Source/WebKit2/UIProcess/ios/WKActionSheetAssistant.mm:580: Should be indented on a separate line, with the colon or comma first on that line. [whitespace/indent] [4] ERROR: Source/WebKit2/UIProcess/ios/WKActionSheetAssistant.mm:580: Comma should be at the beginning of the line in a member initialization list. [whitespace/init] [4] ERROR: Source/WebKit2/UIProcess/ios/WKActionSheetAssistant.mm:587: Wrong number of spaces before statement. (expected: 16) [whitespace/indent] [4] Total errors found: 8 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Wenson Hsieh
Comment 4 2017-06-19 18:10:35 PDT
Comment on attachment 313344 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=313344&action=review > Source/WebKit2/UIProcess/ios/WKActionSheetAssistant.mm:127 > + if (auto positionInformation = [delegate positionInformationForActionSheetAssistant:self]) Can this just be _positionInformation = [delegate positionInformationForActionSheetAssistant:self]? > Source/WebKit2/UIProcess/ios/WKActionSheetAssistant.mm:348 > + [self synchronouslyRetrievePositionInformation]; Nit - I think it would be cleaner if this returned a BOOL like -ensurePositionInformationIsUpToDate:, so we could do something like if (![self synchronouslyRetrievePositionInformation]) return; ...etc... > Source/WebKit2/UIProcess/ios/WKActionSheetAssistant.mm:513 > + [self synchronouslyRetrievePositionInformation]; Ditto. > Source/WebKit2/UIProcess/ios/WKActionSheetAssistant.mm:557 > + [self synchronouslyRetrievePositionInformation]; Ditto.
Wenson Hsieh
Comment 5 2017-06-19 18:19:55 PDT
Comment on attachment 313344 [details] Patch r=me Please make sure that the PositionInformationTests still all pass.
Tim Horton
Comment 6 2017-06-20 12:44:39 PDT
Tests all pass.
Tim Horton
Comment 7 2017-06-20 12:46:39 PDT
Note You need to log in before you can comment on or make changes to this bug.